feat: prepare Market Exchange for production deployment